lib/src/compiler/tests/testdata/errors/35.out
error[E107]: unknown identifier `y`
 --> line:7:11
  |
7 |       and y == 1
  |           ^ this identifier has not been declared
  |